# cwlogs-rqid-filter

./: CHANGELOG.md  README.md  cwlogs-rqid-filter.py  pyproject.toml  requirements.txt  setup.cfg
cwlogs_rqid_filter/: __init__.py  __main__.py  console.py
