[tool.poetry]
name = "cwlogs_rqid_filter"
version = "0.1.1"
readme = "README.md"
description = "Prints all log events messages related to a single request (by AWS Request ID) that in any message of any event match a custom python regex pattern"
homepage = "https://github.com/spascou/cwlogs-rqid-filter"
authors = ["Sylvain Pascou <sylvain@pascou.net>"]
license = "MIT"
packages = [{ include = "cwlogs_rqid_filter" }]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
ciso8601 = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
