[tool.poetry]
name = "cwlogs_rqid_filter"
version = "0.2.1"
readme = "README.md"
description = "Fetch all log events messages related to requests (by AWS Request ID) that in any message of any event match a custom python regex pattern"
homepage = "https://github.com/spascou/cwlogs-rqid-filter"
authors = ["Sylvain Pascou <sylvain@pascou.net>"]
license = "MIT"
packages = [{ include = "cwlogs_rqid_filter" }]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
ciso8601 = "^2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cwlogs-rqid-filter = 'cwlogs_rqid_filter.console:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
